frontend/src/assets/styles/commons.css
/*
GLOBAL CSS VARIABLES AND STYLES THAT SHOULD BE USED IN ALL PAGES

*/

body,
p,
h1,
h2,
h3,
h4,
h5,
h6,
label,
input,
select,
textarea,
button,
span {
  font: 14px/1 "IBM Plex Sans", sans-serif;
  /* font-weight: bold; */
}

body {
  overflow: inherit;
  margin: 0;
  padding: 0;
  background-color: var(--background);
  /*padding: 0;*/
  /*--s: 150px; !* control the size *!*/
  /*--c1: var(--background);*/
  /*--c2: #fcf8f2;*/

  /*--_g:*/
  /*        var(--c1) 0%  5% ,var(--c2) 6%  15%,var(--c1) 16% 25%,var(--c2) 26% 35%,var(--c1) 36% 45%,*/
  /*        var(--c2) 46% 55%,var(--c1) 56% 65%,var(--c2) 66% 75%,var(--c1) 76% 85%,var(--c2) 86% 95%,*/
  /*        #0000 96%;*/
  /*background:*/
  /*        radial-gradient(50% 50% at 100% 0,var(--_g)),*/
  /*        radial-gradient(50% 50% at 0 100%,var(--_g)),*/
  /*        radial-gradient(50% 50%,var(--_g)),*/
  /*        radial-gradient(50% 50%,var(--_g)) calc(var(--s)/2) calc(var(--s)/2)*/
  /*        var(--c1);*/
  /*background-size: var(--s) var(--s);*/
}

:root {
  --text: #4f5248;
  --lighttext: #83887f;
  --shadow: #83887f;
  /* #697683 */
  --lightertext: #9ca194;
  --background: #faf6e8;
  --onbackground: rgb(249, 248, 244);
  --onbackgroundfaded: rgb(245, 245, 244, 0.2);
  --darkonbackground: rgb(235, 236, 233);
  --primary: #328d3d;

  /* #ceebc1, #c5e3b7 */
  --between-primary: #709a58;
  --onprimary: #fdfaf1;
  --old-primary: #9ad379;
  --secondary: #d8d8c5;
  --error: #de6f6f;
  --scrollbarthumb: #004f2d;
  --bordercolor: #dadad0;
  --always-background: #faf6e8;
  --on-onbackground: rgb(238, 236, 231);
  --green: #328d3d;
  --light-green: #9ad379;
  --star-background: #dedad4;
  --star-active: #ff9c1a;
  --used: #5975d0;
  --new: #6cb945;
  --user-profile: #aed794;
  --stripe: #eef0f2;

  --to-primary: #e0ebdb;
  --to-lila: #e6e6f1;
  --to-profession: #e7eff6;
  --to-admin: #dee4f5;
  --to-error: #fedede;

  --lila: #8974a5;
  --accent: #6696e2;
  --profession: #5b9bd5;
  --admin: #3d4a70;

  --border-light: 5px;
  --border-radius: 0.8em;
  --border-hard: 50px;

  --border: 1px solid var(--primary);
  --input-height: 35px;

  --cloud1: #fdfcfb;
  --cloud2: #fbfbfb;
}

.dark-mode {
  --text: #ced3c1;
  --lighttext: #797f86;
  --shadow: #4f5f6f;

  --lightertext: #878f82;

  --background: #141e28;
  --onbackground: rgb(23 28 35);

  --onbackgroundfaded: rgba(49, 58, 63, 0.1);
  --darkonbackground: #1d2229;
  --primary: #8fbd79;
  --onprimary: #29333a;
  --between-primary: #187736;
  --old-primary: #1ba446;
  --secondary: #595953;
  --error: #de6f6f;
  --scrollbarthumb: #9a968c;
  --bordercolor: #646462;
  --always-background: #faf6e8;
  --on-onbackground: rgb(22 30 40);
  --green: #1b6926;
  --light-green: #9ad379;
  --star-background: #4b4f4f;
  --star-active: #ff9c1a;
  --stripe: #181d25;

  --to-primary: #20271c;
  --to-lila: #1d1825;
  --to-profession: #192531;
  --to-admin: #171c2d;
  --to-error: #282020;

  --lila: #a98cd1;
  --accent: #6696e2;
  --profession: #77bdff;
  --admin: #768ed4;

  --user-profile: #20252b;

  --cloud1: #10171f;
  --cloud2: #10171f;
}

html {
  /* Webkit-based browsers (Chrome, Safari) */

  &::-webkit-scrollbar {
    width: 10px;
    background: transparent;
  }

  &::-webkit-scrollbar-track {
    background: transparent;
  }

  &::-webkit-scrollbar-thumb {
    border-radius: var(--border-radius);
    background-color: var(--primary);
  }

  &::-webkit-scrollbar-track-piece {
    background: transparent;
  }

  /* Standard scrollbar properties (for Firefox and others) */
  scrollbar-width: thin;
  scrollbar-color: var(--primary) transparent;
  scrollbar-width: thin;
  scrollbar-color: var(--primary) transparent;
}

a {
  color: inherit;
  /* Inherit the color from the parent element */
  text-decoration: none;
  /* Remove underlines */
}

a:hover {
  text-decoration: none;
  /* Remove underlines */
  color: inherit;
}

.normal {
  font-weight: normal;
}

.bold {
  font-weight: bold;
}

i {
  color: inherit;
}

h2 {
  font-size: 24px;
  font-weight: bold;
  color: var(--text);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.2em;
}

h3 {
  font-size: 16px;
  font-weight: bolder;
  color: inherit;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

form {
  margin-block-end: 0;
}

.form-group {
  margin-bottom: 0;
}

select,
input[type="text"],
input[type="password"],
input[type="email"],
input[type="number"],
input[type="date"],
input[type="time"],
input[type="tel"],
input[type="url"],
input[type="search"],
input[type="select"] {
  width: 100%;
  height: var(--input-height);
}

input[type="checkbox"] {
  position: relative;
  width: 1.5em;
  height: 1.5em;
  color: var(--primary);
  border: 1px solid var(--primary);
  border-radius: var(--border-hard);
  appearance: none;
  outline: 0;
  cursor: pointer;
  transition: all 0.3s ease-in-out;

  &::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 110%;
    bottom: -2px;
    left: 0;
    -webkit-transition: bottom 0.3s cubic-bezier(0.5, 2.5, 0.7, 0.7);
    -o-transition: bottom 0.3s cubic-bezier(0.5, 2.5, 0.7, 0.7);
    transition: bottom 0.3s cubic-bezier(0.5, 2.5, 0.7, 0.7);
  }

  &::before {
    position: absolute;
    content: "";
    display: block;
    top: 0;
    left: 5px;
    width: 8px;
    height: 14px;
    border-style: solid;
    border-color: var(--background);
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
    opacity: 0;
  }

  &:checked {
    color: var(--background);
    border-color: var(--primary);
    background: var(--primary);

    &::before {
      opacity: 1;
    }

    ~ label::before {
      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
    }
  }

  &:focus-visible,
  &:hover {
    transform: translateY(-2px);
    box-shadow: 0px 2px var(--primary);
  }
}

select {
  cursor: pointer;
  box-sizing: border-box;
  -webkit-appearance: none;
  appearance: none;
  -moz-appearance: none;
  transition: none;
  background: url("assets/images/chevron-down-solid.svg") no-repeat;
  background-size: 1em;
  background-position-x: 98%;
  background-position-y: 50%;
}

label {
  margin-bottom: 0;
  width: 100%;
}

button:focus-visible,
button:focus-within button:focus {
  outline: 0;
}

p {
  margin-bottom: 0;
}

.f-c-c-c {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}
.f-c-c-e {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: end;
  gap: 1rem;
}

.f-c-e-e {
  display: flex;
  flex-direction: column;
  justify-content: end;
  align-items: end;
  gap: 1rem;
}

.f-c-e-c {
  display: flex;
  flex-direction: column;
  justify-content: end;
  align-items: center;
  gap: 1rem;
}

.f-c-c-s {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  gap: 1rem;
}

.f-c-s-c {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  gap: 1rem;
}

.f-c-s-s {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  gap: 1rem;
}

.g-0 {
  gap: 0 !important;
}

.g-1 {
  gap: 1rem !important;
}

.g-2 {
  gap: 2rem !important;
}

.f-c-sb-c {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
}

.f-r-c-c {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.f-r-sb-c {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
}

.f-r-sb-s {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: start;
  gap: 1rem;
}

.f-r-e-c {
  display: flex;
  flex-direction: row;
  justify-content: end;
  align-items: center;
  gap: 1rem;
}

.f-r-c-e {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: end;
  gap: 1rem;
}

.f-r-s-c {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  gap: 1rem;
}

.f-r-s-s {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: start;
  gap: 1rem;
}

.f-c-s-s {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  gap: 1rem;
}

.f-r-st-c {
  display: flex;
  flex-direction: row;
  justify-content: stretch;
  align-items: center;
  gap: 1rem;
}

.f-c-sb-c {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
}

.skeleton {
  --color-base: var(--text);
  --color-highlight: var(--lighttext);
  position: relative;
  overflow: hidden;
  width: 50%;
  height: 40px;
  background: var(--color-base);

  &::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(
      90deg,
      var(--color-base),
      var(--color-highlight),
      var(--color-base)
    );
    animation: progress 1s ease-in-out infinite;
  }
}

@keyframes progress {
  0% {
    transform: translate3d(-100%, 0, 0);
  }

  100% {
    transform: translate3d(100%, 0, 0);
  }
}

.w-7-12 {
  width: 13%;
}

.h-5rem {
  height: 5rem;
}

.font-size-12 {
  font-size: 12px !important;
}

.font-size-16 {
  font-size: 16px !important;
}

.font-size-14 {
  font-size: 14px !important;
}

.font-size-22 {
  font-size: 22px !important;
}

.font-size-24 {
  font-size: 24px !important;
}

.font-size-30 {
  font-size: 30px !important;
}

.font-size-26 {
  font-size: 26px !important;
}

.font-size-20 {
  font-size: 20px !important;
}

.font-weight-bold {
  font-weight: bold;
}

.font-weight-bolder {
  font-weight: bolder;
}

.font-weight-normal {
  font-weight: normal;
}

.pointer {
  cursor: pointer;
}

.fixed {
  position: fixed;
}

.g-05 {
  gap: 0.5em;
}

/* ...................... */

.hidden {
  display: none !important;
}

